Add recipes for homemade beef meatballs in vegetable and sherry sauce, açai bowl, and albóndigas caseras de ternera in HTML format

--- a/recipes/desayuno.html
+++ b/recipes/desayuno.html
@@ -67,10 +67,12 @@
   <h1>Cómo hacer açaí bowl, el desayuno o merienda más saludable</h1>
 
   <!-- Imagen principal de la receta -->
-  <img src="./odin-recipes/img" alt="Açai Bowl con frutas y granola" style="border-radius: 10px;"> <!-- Imagen con bordes redondeados -->
-
+  <img src="../img/acai_bowl.jpg" alt="Açai Bowl con frutas y granola" style="border-radius: 10px;"> <!-- Imagen con bordes redondeados -->
+<p>El <strong>açaí bowl o cuenco de açaí o acai</strong> es una de las mejores maneras de comenzar el día. <strong>El mejor desayuno y el más saludable</strong> para cuando necesitamos un chute energético potente con el que aguantar la mañana sin desfallecer. Su preparación es sencilla, recordando a un <a class="text-outboundlink" href="https://www.directoalpaladar.com/ingredientes-y-alimentos/como-hacer-el-smoothie-bowl-perfecto-sin-receta" data-vars-post-title="Cómo hacer el smoothie bowl perfecto sin receta" data-vars-post-url="https://www.directoalpaladar.com/ingredientes-y-alimentos/como-hacer-el-smoothie-bowl-perfecto-sin-receta">smoothie bowl</a> solo hay que triturar leche, açaí en polvo y fruta congelada y adornarla con cereales, semillas, frutos secos o lo que más nos apetezca.</p>
+<p>El <a class="text-outboundlink" href="https://www.directoalpaladar.com/ingredientes-y-alimentos/el-acai-o-acai-propiedades-y-usos-en-la-cocina-de-este-superalimento" data-vars-post-title="El Açaí o Acai. Propiedades y usos en la cocina de este superalimento" data-vars-post-url="https://www.directoalpaladar.com/ingredientes-y-alimentos/el-acai-o-acai-propiedades-y-usos-en-la-cocina-de-este-superalimento">açaí</a> está considerado como un superalimento, es antioxidante, rico en calcio, proteínas, fibra y mucho más. Ayuda a mantener fuerte el sistema inmunológico y a prevenir enfermedades cardiovasculares. Una joya, vamos. Estas bayas, que se parecen mucho a los arándanos, se cultivan en Brasil y hasta España llegan deshidratadas y pulverizadas. Con ellas en este formato hemos preparado nuestro <strong>açaí bowl</strong>. Lo podéis ver en vídeo y suscribiros a nuestro canal de YouTube para no perderos nada o seguir el paso a paso tradicional que encontraréis a continuación.</p>
 <div class="asset-recipe-meta">
     <h2 class="asset-recipe-section-title"> Ingredientes </h2>
+    <hr>
     <div class="asset-recipe-yield">
      Para 2 personas</div>
     <ul class="asset-recipe-list">
@@ -109,6 +111,7 @@
        </li>
                </ul>
     <h2 class="asset-recipe-section-title">Cómo hacer açai bowl</h2>
+    <hr>
     <div class="asset-recipe-difficulty">Dificultad: Fácil</div>
     <ul class="asset-recipe-list">
      <li class="asset-recipe-list-item m-is-totaltime">
